report: fix link contrast issue in dark mode (#10364)

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -345,7 +345,8 @@
 .lh-audit-group a,
 .lh-category-header__description a,
 .lh-audit__description a,
-.lh-footer a {
+.lh-footer a,
+.lh-table-column--link a {
   color: var(--color-informative);
 }
 
